# labelstore

./: Containerfile  README.md  pyproject.toml
src/labelstore/: __init__.py  __main__.py  item.py
src/labelstore/model/: store.py
tests/: test_item.py
