[tool.poetry]
name = "labelstore"
version = "0.1.0"
description = ""
authors = ["Jonathan David Page <jonathan@sleepingcyb.org>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"

[tool.poetry.scripts]
labelstore = "labelstore:app.run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
